# discord-rich-presence-rust

./: .gitignore  Cargo.toml  readme.md
data/: empty_settings.json  settings.json
src/activity/: activity.rs
src/lib/: launch.rs  lib.rs  req.rs
src/ui/: dropdown.rs  gui.rs
