[package]
name = "discord-rich-presence"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "."
]

[workspace.dependencies]
eframe = { version = "*", features = ["default", "__screenshot"] }
egui_extras = { version = "*", features = ["default", "image"] }

[dependencies]
eframe = { workspace = true }
egui_extras = { workspace = true, features = ["default", "image", "all_loaders"] }
image = { version = "0.25", features = ["png"] }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
discord-rich-presence = "0.2.4"
serde = "1.0.204"
serde_json = "1.0.120"
chrono = "0.4.38"
reqwest = { version = "0.11", features = ["blocking"] }
sysinfo = "0.30.13"

[[bin]]
name = "gui"
path = "src/ui/gui.rs"

[[bin]]
name = "discord_presence_activity"
path = "src/activity/activity.rs"

#[[bin]]
#name = "test"
#path = "src/test/test.rs"

[lib]
name = "settings_lib"
path = "src/lib/lib.rs"